# operational-research

./: .gitignore  .pre-commit-config.yaml  app.py  config.py  main.py  optimiser.kv  optimizer.kv  pyproject.toml  ruff.toml
config/: base.json
src/: ga.py  generator.py  main.py  problem_initializer.py  solution_checker.py
src/classes/: checker.py  courier.py  generator.py  package.py  problem_instance.py  solution.py  vehicle.py
src/ga/: ga.py  ga_state.py
src/ga/mutations/: __init__.py  couriers.py  mutation.py  packages.py  route.py  vehicles.py
src/model/: __init__.py  problem.py  solution.py
src/model/input/: __init__.py  courier.py  graph.py  package.py  vehicle.py
src/ui/: __init__.py  animation_popup.py  animation_screen.py  app.py  constans.py  draw_solution.py  input_popup.py  input_screen.py  loaded_problem.py  loader_screen.py  optimizer.kv  optimizer_app.py  ui.py  ui_utils.py  utils.py
src/utils/: utils.py
tests/: coverage.ipynb  tests.ipynb
tests/data/: 01_one-courier.json  02_small.json  03_medium.json  04_big.json  big.json  correctness.json  medium.json
tests/problems/: 01-one-courier.json  02-four-couriers.json  03-big.json  04-medium.json  05-small.json
tests/results/: 01-one-courier_results.csv  01_one-courier_results.parquet  02-four-couriers_results.csv  02_small_results.parquet  03-big_results.csv  03_medium_results.parquet  04-medium_results.csv  04_big_results.parquet  05-small_results.csv  all_mean_costs.csv  big_results.csv  correctness_results.csv  medium_results.csv
tests/results/mutations/: 03-big_mutations_stats.csv  (+4 more)
(+7 files in other folders)
