[project]
name = "operational-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "kivy>=2.3.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pyqt5>=5.15.11",
    "ruff>=0.11.4",
    "kivy-garden.matplotlib>=0.1.1.dev0"
]
